# botmonster-build-public

./: .gitattributes  .gitignore  App.tsx  README.md  WORKFLOW_CONTENT.txt  constants.ts  i18n.ts  index.html  index.tsx  metadata.json  package-lock.json  package.json  pnpm-lock.yaml  release_test.txt  tauri.conf.json  tsconfig.json  types.ts  vercel.json  vite.config.ts
api/: binance.ts  gemini.ts
components/: AiAnalysisPanel.tsx  AiStrategyGeneratorModal.tsx  AlertPopup.tsx  ApiStatusIndicator.tsx  BacktestControls.tsx  BacktestSummaryModal.tsx  ChartCountdown.tsx  CollapsibleSection.tsx  ConfirmationModal.tsx  ControlPanel.tsx  CustomRechartsChart.tsx  Header.tsx  HeatmapPanel.tsx  HelpArticleModal.tsx  HelpPanel.tsx  Icons.tsx  LightweightChart.tsx  MainContent.tsx  MarketSessionsIndicator.tsx  OnboardingModal.tsx  OnboardingOverlay.tsx  OnboardingWelcomeModal.tsx  PairScanner.tsx  PresetManagerModal.tsx  ReviewModeBanner.tsx  RobotStopModal.tsx  ScannerPanel.tsx  SessionStartModal.tsx  SessionSummaryModal.tsx  SettingsModal.tsx  Sidebar.tsx  StrategyExplanationModal.tsx  StrategyInfoModal.tsx  StrategyManagerModal.tsx  StrategyPanel.tsx  TitleBar.tsx  TradeConfirmationModal.tsx  TradeHistoryPanel.tsx  TradingChart.tsx  TradingModeSelector.tsx  (+2 more)
hooks/: useAppVersion.ts  useBacktestEngine.ts  useHeatmapEngine.ts  useMarketRegimeEngine.ts  useStrategyEngine.ts  useTradeManager.ts  useTranslation.ts  useUpdater.ts  useWebSocket.ts
locales/: en.ts  fr.ts  index.ts
services/: backtestService.ts  binanceService.ts  (+14 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+12 files in other folders)
